// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea component should match snapshots 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c1 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c1::-webkit-inner-spin-button,
.c1::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1::-webkit-calendar-picker-indicator,
.c1::-webkit-search-cancel-button {
  display: none;
}

.c1::-ms-clear {
  display: none;
}

.c1:hover,
.c1:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c1[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c1:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c1[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c2.c2 {
  display: block;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="c0"
>
  <textarea
    class="c1 c2"
    id="textarea-0"
    placeholder=""
  />
  
  
</div>
`;

exports[`TextArea component should match snapshots 2`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c1 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
  background-color: #E5EDFC;
}

.c1::-webkit-inner-spin-button,
.c1::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1::-webkit-calendar-picker-indicator,
.c1::-webkit-search-cancel-button {
  display: none;
}

.c1::-ms-clear {
  display: none;
}

.c1:hover,
.c1:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c1[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c1:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c1[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c2.c2 {
  display: block;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="c0"
>
  <textarea
    class="c1 c2"
    id="textarea-1"
    placeholder=""
  >
    foo
  </textarea>
  
  
</div>
`;

exports[`TextArea component should match snapshots 3`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c1 {
  display: block;
  font-weight: bold;
  margin: 8px 0 0;
  color: inherit;
}

.c3.c3 {
  display: block;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="c0"
>
  <label
    class="c1"
    for="textarea-2"
  >
    Text label
  </label>
  <textarea
    class="c2 c3"
    id="textarea-2"
    placeholder=""
  />
  
  
</div>
`;

exports[`TextArea component should match snapshots 4`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c3 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c3::-webkit-inner-spin-button,
.c3::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3::-webkit-calendar-picker-indicator,
.c3::-webkit-search-cancel-button {
  display: none;
}

.c3::-ms-clear {
  display: none;
}

.c3:hover,
.c3:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c3[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c3:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c3[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c1 {
  display: block;
  font-weight: bold;
  margin: 8px 0 0;
  color: inherit;
}

.c2 {
  color: #ec584e;
}

.c4.c4 {
  display: block;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="c0"
>
  <label
    class="c1"
    for="textarea-3"
  >
    Text label
    <em
      class="c2"
    >
      *
    </em>
  </label>
  <textarea
    class="c3 c4"
    id="textarea-3"
    placeholder=""
    required=""
  />
  
  
</div>
`;

exports[`TextArea component should match snapshots 5`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c1 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c1::-webkit-inner-spin-button,
.c1::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1::-webkit-calendar-picker-indicator,
.c1::-webkit-search-cancel-button {
  display: none;
}

.c1::-ms-clear {
  display: none;
}

.c1:hover,
.c1:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c1[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c1:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c1[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c2.c2 {
  display: block;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="c0"
>
  <textarea
    class="c1 c2"
    disabled=""
    id="textarea-4"
    placeholder=""
  />
  
  
</div>
`;

exports[`TextArea component should match snapshots 6`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c1 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c1::-webkit-inner-spin-button,
.c1::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1::-webkit-calendar-picker-indicator,
.c1::-webkit-search-cancel-button {
  display: none;
}

.c1::-ms-clear {
  display: none;
}

.c1:hover,
.c1:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c1[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c1:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c1[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c2.c2 {
  display: block;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="c0"
>
  <textarea
    class="c1 c2"
    id="textarea-5"
    placeholder="this input has a placeholder"
  />
  
  
</div>
`;

exports[`TextArea component should match snapshots 7`] = `
.c3 {
  color: #ac001a;
  margin-top: 8px;
  cursor: text;
  display: block;
  line-height: normal;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c1 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c1::-webkit-inner-spin-button,
.c1::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1::-webkit-calendar-picker-indicator,
.c1::-webkit-search-cancel-button {
  display: none;
}

.c1::-ms-clear {
  display: none;
}

.c1:hover,
.c1:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c1[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c1:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c1[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c4 {
  color: inherit;
}

.c2.c2 {
  display: block;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="c0"
>
  <textarea
    class="c1 c2"
    id="textarea-6"
    placeholder=""
  />
  <span
    class="InputErrorMessage-sc-s0eyav-0 c3 c4"
  >
    this is a helper text
  </span>
  
</div>
`;

exports[`TextArea component should match snapshots 8`] = `
.c3 {
  color: #ac001a;
  margin-top: 8px;
  cursor: text;
  display: block;
  line-height: normal;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c1 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
  border-color: #e91b0c;
}

.c1::-webkit-inner-spin-button,
.c1::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1::-webkit-calendar-picker-indicator,
.c1::-webkit-search-cancel-button {
  display: none;
}

.c1::-ms-clear {
  display: none;
}

.c1:hover,
.c1:focus {
  border-color: #e91b0c;
  box-shadow: 0px 3px 1px -2px rgba(233,27,12,0.2),0px 2px 2px 0px rgba(233,27,12,0.14),0px 1px 5px 0px rgba(233,27,12,0.12);
}

.c1[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c1:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c1[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c2.c2 {
  display: block;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="c0"
>
  <textarea
    class="c1 c2"
    id="textarea-7"
    placeholder=""
  />
  
  <span
    class="InputErrorMessage-sc-s0eyav-0 c3"
  >
    Error message
  </span>
</div>
`;

exports[`TextArea component should match snapshots 9`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #ffffff;
}

.c1 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: rgba(0,0,0,0.7);
  border: 2px solid transparent;
  color: #ffffff;
}

.c1::-webkit-inner-spin-button,
.c1::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1::-webkit-calendar-picker-indicator,
.c1::-webkit-search-cancel-button {
  display: none;
}

.c1::-ms-clear {
  display: none;
}

.c1::-webkit-input-placeholder {
  color: #ffffff;
}

.c1::-moz-placeholder {
  color: #ffffff;
}

.c1:-ms-input-placeholder {
  color: #ffffff;
}

.c1::placeholder {
  color: #ffffff;
}

.c1:hover,
.c1:focus {
  border-color: #0CC0EA;
}

.c1[disabled] {
  color: rgba(255,255,255,0.5);
  border-color: transparent;
}

.c1[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c2.c2 {
  display: block;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="c0"
>
  <textarea
    class="c1 c2"
    id="textarea-8"
    placeholder=""
  />
  
  
</div>
`;

exports[`TextArea component should match snapshots 10`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #ffffff;
}

.c1 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: rgba(0,0,0,0.7);
  border: 2px solid transparent;
  color: #ffffff;
}

.c1::-webkit-inner-spin-button,
.c1::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1::-webkit-calendar-picker-indicator,
.c1::-webkit-search-cancel-button {
  display: none;
}

.c1::-ms-clear {
  display: none;
}

.c1::-webkit-input-placeholder {
  color: #ffffff;
}

.c1::-moz-placeholder {
  color: #ffffff;
}

.c1:-ms-input-placeholder {
  color: #ffffff;
}

.c1::placeholder {
  color: #ffffff;
}

.c1:hover,
.c1:focus {
  border-color: #0CC0EA;
}

.c1[disabled] {
  color: rgba(255,255,255,0.5);
  border-color: transparent;
}

.c1[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c2.c2 {
  display: block;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="c0"
>
  <textarea
    class="c1 c2"
    id="textarea-9"
    placeholder=""
  >
    foo
  </textarea>
  
  
</div>
`;

exports[`TextArea component should match snapshots 11`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #ffffff;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: rgba(0,0,0,0.7);
  border: 2px solid transparent;
  color: #ffffff;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2::-webkit-input-placeholder {
  color: #ffffff;
}

.c2::-moz-placeholder {
  color: #ffffff;
}

.c2:-ms-input-placeholder {
  color: #ffffff;
}

.c2::placeholder {
  color: #ffffff;
}

.c2:hover,
.c2:focus {
  border-color: #0CC0EA;
}

.c2[disabled] {
  color: rgba(255,255,255,0.5);
  border-color: transparent;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c1 {
  display: block;
  font-weight: bold;
  margin: 8px 0 0;
  color: inherit;
}

.c3.c3 {
  display: block;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="c0"
>
  <label
    class="c1"
    for="textarea-10"
  >
    Text label
  </label>
  <textarea
    class="c2 c3"
    id="textarea-10"
    placeholder=""
  />
  
  
</div>
`;

exports[`TextArea component should match snapshots 12`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #ffffff;
}

.c3 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: rgba(0,0,0,0.7);
  border: 2px solid transparent;
  color: #ffffff;
}

.c3::-webkit-inner-spin-button,
.c3::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3::-webkit-calendar-picker-indicator,
.c3::-webkit-search-cancel-button {
  display: none;
}

.c3::-ms-clear {
  display: none;
}

.c3::-webkit-input-placeholder {
  color: #ffffff;
}

.c3::-moz-placeholder {
  color: #ffffff;
}

.c3:-ms-input-placeholder {
  color: #ffffff;
}

.c3::placeholder {
  color: #ffffff;
}

.c3:hover,
.c3:focus {
  border-color: #0CC0EA;
}

.c3[disabled] {
  color: rgba(255,255,255,0.5);
  border-color: transparent;
}

.c3[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c1 {
  display: block;
  font-weight: bold;
  margin: 8px 0 0;
  color: inherit;
}

.c2 {
  color: inherit;
}

.c4.c4 {
  display: block;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="c0"
>
  <label
    class="c1"
    for="textarea-11"
  >
    Text label
    <em
      class="c2"
    >
      *
    </em>
  </label>
  <textarea
    class="c3 c4"
    id="textarea-11"
    placeholder=""
    required=""
  />
  
  
</div>
`;

exports[`TextArea component should match snapshots 13`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #ffffff;
}

.c1 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: rgba(0,0,0,0.7);
  border: 2px solid transparent;
  color: #ffffff;
}

.c1::-webkit-inner-spin-button,
.c1::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1::-webkit-calendar-picker-indicator,
.c1::-webkit-search-cancel-button {
  display: none;
}

.c1::-ms-clear {
  display: none;
}

.c1::-webkit-input-placeholder {
  color: #ffffff;
}

.c1::-moz-placeholder {
  color: #ffffff;
}

.c1:-ms-input-placeholder {
  color: #ffffff;
}

.c1::placeholder {
  color: #ffffff;
}

.c1:hover,
.c1:focus {
  border-color: #0CC0EA;
}

.c1[disabled] {
  color: rgba(255,255,255,0.5);
  border-color: transparent;
}

.c1[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c2.c2 {
  display: block;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="c0"
>
  <textarea
    class="c1 c2"
    disabled=""
    id="textarea-12"
    placeholder=""
  />
  
  
</div>
`;

exports[`TextArea component should match snapshots 14`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #ffffff;
}

.c1 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: rgba(0,0,0,0.7);
  border: 2px solid transparent;
  color: #ffffff;
}

.c1::-webkit-inner-spin-button,
.c1::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1::-webkit-calendar-picker-indicator,
.c1::-webkit-search-cancel-button {
  display: none;
}

.c1::-ms-clear {
  display: none;
}

.c1::-webkit-input-placeholder {
  color: #ffffff;
}

.c1::-moz-placeholder {
  color: #ffffff;
}

.c1:-ms-input-placeholder {
  color: #ffffff;
}

.c1::placeholder {
  color: #ffffff;
}

.c1:hover,
.c1:focus {
  border-color: #0CC0EA;
}

.c1[disabled] {
  color: rgba(255,255,255,0.5);
  border-color: transparent;
}

.c1[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c2.c2 {
  display: block;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="c0"
>
  <textarea
    class="c1 c2"
    id="textarea-13"
    placeholder="this input has a placeholder"
  />
  
  
</div>
`;

exports[`TextArea component should match snapshots 15`] = `
.c3 {
  color: #ac001a;
  margin-top: 8px;
  cursor: text;
  display: block;
  line-height: normal;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #ffffff;
}

.c1 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: rgba(0,0,0,0.7);
  border: 2px solid transparent;
  color: #ffffff;
}

.c1::-webkit-inner-spin-button,
.c1::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1::-webkit-calendar-picker-indicator,
.c1::-webkit-search-cancel-button {
  display: none;
}

.c1::-ms-clear {
  display: none;
}

.c1::-webkit-input-placeholder {
  color: #ffffff;
}

.c1::-moz-placeholder {
  color: #ffffff;
}

.c1:-ms-input-placeholder {
  color: #ffffff;
}

.c1::placeholder {
  color: #ffffff;
}

.c1:hover,
.c1:focus {
  border-color: #0CC0EA;
}

.c1[disabled] {
  color: rgba(255,255,255,0.5);
  border-color: transparent;
}

.c1[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c4 {
  color: inherit;
}

.c2.c2 {
  display: block;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="c0"
>
  <textarea
    class="c1 c2"
    id="textarea-14"
    placeholder=""
  />
  <span
    class="InputErrorMessage-sc-s0eyav-0 c3 c4"
  >
    this is a helper text
  </span>
  
</div>
`;

exports[`TextArea component should match snapshots 16`] = `
.c3 {
  color: #ac001a;
  margin-top: 8px;
  cursor: text;
  display: block;
  line-height: normal;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #ffffff;
}

.c1 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: rgba(0,0,0,0.7);
  border: 2px solid transparent;
  color: #ffffff;
  border-color: #ffffff;
}

.c1::-webkit-inner-spin-button,
.c1::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1::-webkit-calendar-picker-indicator,
.c1::-webkit-search-cancel-button {
  display: none;
}

.c1::-ms-clear {
  display: none;
}

.c1::-webkit-input-placeholder {
  color: #ffffff;
}

.c1::-moz-placeholder {
  color: #ffffff;
}

.c1:-ms-input-placeholder {
  color: #ffffff;
}

.c1::placeholder {
  color: #ffffff;
}

.c1:hover,
.c1:focus {
  border-color: #0CC0EA;
}

.c1[disabled] {
  color: rgba(255,255,255,0.5);
  border-color: transparent;
}

.c1[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c4 {
  color: #ffffff;
}

.c2.c2 {
  display: block;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="c0"
>
  <textarea
    class="c1 c2"
    id="textarea-15"
    placeholder=""
  />
  
  <span
    class="c3 c4"
  >
    Error message
  </span>
</div>
`;
